# shoboi-tag-editor

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  run.py  shoboi-tag-editor.desktop
.github/workflows/: build.yml  test.yml
src/shoboi_tag_editor/: __init__.py  __main__.py  main.py  mainwindow.py  metadata.py  tablemodel.py  tableview.py
src/shoboi_tag_editor/translations/: __init__.py  shoboi_tag_editor_ja.ts
tests/: test_metadata.py  test_tablemodel.py
