[project]
name = "shoboi-tag-editor"
version = "0.1.0"
description = "音楽ファイルのメタデータを編集するGUIアプリケーション"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mutagen>=1.47.0",
    "pyqt6>=6.10.2",
]

[project.scripts]
shoboi-tag-editor = "shoboi_tag_editor.main:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/shoboi_tag_editor"]

[tool.hatch.build.targets.wheel.force-include]
"src/shoboi_tag_editor/translations/*.qm" = "shoboi_tag_editor/translations/"

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
    "pytest>=9.0.2",
]
